--- a/Button.html
+++ b/Button.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <a href="ttps://api.whatsapp.com/send?phone=YOURPHONE" class="WAB" target="_blank">
 <i class="fa fa-whatsapp my-float"></i>
 </a>
